# greater-will

./: .codexignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  gw-watchdog.sh
config/: default-phases.toml
docs/daemon/: architecture.md  launchd-troubleshooting.md  module-graph.dot
docs/validation/: resume-test-results.md
plans/: 2026-04-13-fix-daemon-detection-parity-plan.md  2026-04-13-fix-daemon-recovery-parity-plan.md  benchmark.md
src/: main.rs  scanner.rs
src/batch/: lock.rs  mod.rs  queue.rs  state.rs
src/checkpoint/: mod.rs  phase_order.rs  reader.rs  schema.rs  writer.rs
src/cleanup/: health.rs  mod.rs  process.rs  tmux_cleanup.rs
src/client/: socket.rs
src/commands/: clean.rs  daemon.rs  elden.rs  history.rs  logs.rs  mod.rs  ps.rs  queue.rs  replay.rs  run.rs  schedule.rs  status.rs  stop.rs  util.rs
src/config/: cli_args.rs  mod.rs  phase_config.rs  watchdog.rs
src/daemon/: drain.rs  events.rs  executor.rs  heartbeat.rs  mod.rs  network.rs  protocol.rs  reconciler.rs  registry.rs  run_monitor.rs  schedule.rs  server.rs  state.rs
src/engine/: completion.rs  crash_loop.rs  mod.rs  monitor_constants.rs  phase_executor.rs  phase_profile.rs  retry.rs  single_session.rs
src/github/: mod.rs
src/log/: jsonl.rs  mod.rs  structured.rs
src/monitor/: checkpoint_poll.rs  loop_state.rs  mod.rs  nudge.rs  phase_nav.rs  prompt_accept.rs  session_owner.rs
src/output/: mod.rs  progress.rs  tags.rs
src/session/: detect.rs  mod.rs  spawn.rs  tmux.rs
tests/: test_cli.rs
tests/fixtures/: checkpoint-v27.json  (+3 more)
(+16 files in other folders)
