[package]
name = "greater-will"
version = "0.1.0"
edition = "2021"
description = "External Arc Controller for Rune — per-phase Claude Code sessions"
default-run = "gw"

[[bin]]
name = "gw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
tracing-appender = "0.2"
indicatif = "0.17"
console = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sysinfo = "0.33"
libc = "0.2"
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
dirs = "6.0"
sha2 = "0.10"
thiserror = "2"
fs2 = "0.4"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"